--- a/sevencontatos.css
+++ b/sevencontatos.css
@@ -183,7 +183,7 @@ h2{
     width: 150px;
     background-color: white;
     margin: 0 auto;
-    background-image: url("https://filmshotfreezer.files.wordpress.com/2011/07/untitled-1.jpg");
+    background-image: url("Celso.JPG");
     background-size: cover;
     background-position: 50% 50%;
     top:75px;
